--- a/.github/workflows/supabase-migrate.yml
+++ b/.github/workflows/supabase-migrate.yml
@@ -21,6 +21,9 @@ jobs:
         with:
           version: latest
 
+      - name: Debug - List migrations
+        run: ls -la supabase/migrations/
+
       - name: Link Supabase project
         env:
           SUPABASE_ACCESS_TOKEN: ${{ secrets.SUPABASE_ACCESS_TOKEN }}
@@ -28,8 +31,7 @@ jobs:
         run: supabase link --project-ref "$PROJECT_REF"
 
       - name: Push database migrations
-        run: |
-          supabase db push
+        run: supabase db push --include-all
         env:
           SUPABASE_ACCESS_TOKEN: ${{ secrets.SUPABASE_ACCESS_TOKEN }}
 
